Add some parametrized values.